--- a/FRONTEND/package.json
+++ b/FRONTEND/package.json
@@ -19,6 +19,8 @@
     "build": "^0.1.4",
     "dotenv": "^16.4.7",
     "gh-pages": "^6.3.0",
+    "html2canvas": "^1.4.1",
+    "jspdf": "^3.0.1",
     "lucide-react": "^0.475.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
